# timesheet

./: .copier-answers.yml  .coveragerc  .gitignore  .isort.cfg  .pre-commit-config.yaml  .travis.yml  README.md  oca_dependencies.txt  test-requirements.txt
analytic_line_is_timesheet/: README.rst  __init__.py  __manifest__.py
connector_toggl/: README.rst  __init__.py  __openerp__.py
crm_phonecall_timesheet/: README.rst  __manifest__.py
crm_timesheet/: README.rst  __manifest__.py  __openerp__.py
crm_timesheet_analytic_partner/: README.rst  __openerp__.py
hr_attendance_analysis/: README.rst  __init__.py  __openerp__.py  company_view.xml  hr_attendance.py  hr_attendance_demo.xml  hr_attendance_view.xml  hr_contract.py  reports.xml  resource.py  resource_view.xml
hr_employee_cost_history/: README.rst  __manifest__.py
hr_employee_product/: README.rst  __init__.py  __manifest__.py  __openerp__.py
hr_employee_service_product/: README.rst  __manifest__.py
hr_period_create_timesheet/: README.rst  __init__.py  __manifest__.py  __openerp__.py
hr_timesheet_activity_begin_end/: README.rst  __manifest__.py  __openerp__.py
hr_timesheet_activity_start_end/: README.rst  __openerp__.py
hr_timesheet_analysis/: README.rst  __manifest__.py
hr_timesheet_autocreate/: README.rst  __init__.py  __openerp__.py  day_off.py  day_off.xml  holiday.py  holiday_view.xml  scheduled_timesheet.py  scheduled_timesheet.xml
hr_timesheet_begin_end/: README.rst  __manifest__.py
hr_timesheet_begin_end_no_end/: README.rst  (+1 more)
setup/_metapackage/: VERSION.txt  pyproject.toml  setup.py
(+1776 files in other folders)
